--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>Classic Tee</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script src="https://kit.fontawesome.com/15fd9bfa39.js" crossorigin="anonymous"></script>
-    <script src="/scripts/jquery-3.5.1.min.js"></script>
+    <script src="scripts/jquery-3.5.1.min.js"></script>
 </head>
 <body>
   
@@ -29,7 +29,7 @@
                             <li class="cart__item">
                                 <i class="fas fa-times remove"></i>
                                 <span class="item-image">
-                                    <img src="/assets/images/classic-tee.jpg" alt="Classic Tee">
+                                    <img src="assets/images/classic-tee.jpg" alt="Classic Tee">
                                 </span>
                                 
                                 <span class="item-details">
@@ -43,7 +43,7 @@
                             <li class="cart__item">
                                 <i class="fas fa-times remove"></i>
                                 <span class="item-image">
-                                    <img src="/assets/images/classic-tee.jpg" alt="Classic Tee">
+                                    <img src="assets/images/classic-tee.jpg" alt="Classic Tee">
                                 </span>
                                 <span class="item-details">
                                     
@@ -62,7 +62,7 @@
         <div class="main">
         <div class="product">
            <div class="product__image">
-            <img src="/assets/images/classic-tee.jpg" alt="Classic Tee">
+            <img src="assets/images/classic-tee.jpg" alt="Classic Tee">
            </div>
            <div class="product__details">
                 <h1 class="product__title">Classic Tee</h1>
